# cpack-exercise-wt2223

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh  exec  lintian_output  solution.vtk
cmake/: .CPackConfig.cmake.swp  CPackConfig.cmake  Packaging.cmake
